# wikijs-module-meilisearch

./: .gitignore  Cargo.toml  Makefile  README.md  definition.yml  docker-compose.yml  docs.txt  engine.js
.github/workflows/: base.yml
config/: wiki.yml
src/: lib.rs  logger.rs  page.rs  query.rs  transformers.rs
