[package]
name = "wiki_meilisearch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "meilisearch"
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
meilisearch-sdk = { version = "0.27", features = ["futures-unsend"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
reqwest = { version = "0", features = ["json"] }
futures = "0.3.30"
futures-io = "0.3.30"
thiserror = "1"
async-trait = "0.1.81"
log = "0"
env_logger = "0"
glob = "0"
regex = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "0.3", features = ["Window", "Request", "Response", "RequestInit", "RequestMode"] }

[profile.release]
opt-level = "z"  # Optimize for speed, with some considerations for code size
lto = "fat"  # Link Time Optimization for smaller binaries
codegen-units = 1  # Single codegen unit to increase optimizations
panic = "abort"  # Use abort on panic to reduce binary size
